# plant-health-vision

./: README.md  plant_disease_classifier.onnx  pyproject.toml  requirements.txt  sampletest.py
src/: dataset.py  evaluate.py  model.py  onnx_export.py  test.ipynb  train.py
src/api/: main.py  schemas.py
src/inference/: predict.py
