[project]
name = "dl-with-cuda"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "markupsafe (>=3.0.3,<4.0.0)",
    "torch (==2.9.0+cu130)",
    "torchvision (==0.24.0+cu130)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "kaggle (>=2.1.0,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "albumentations (>=2.0.8,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "onnx (>=1.21.0,<2.0.0)",
    "onnxruntime-gpu (>=1.25.1,<2.0.0)",
    "onnxruntime (>=1.25.1,<2.0.0)",
    "onnxscript (>=0.7.0,<0.8.0)",
    "fastapi (>=0.136.1,<0.137.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
uvicorn = {extras = ["standard"], version = "^0.46.0"}

[tool.flake8]
ignore = ["E501"]

